--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
     stroke: #3c97b0;
     fill-opacity: 0.7;
     stroke-opacity: 1;
-    stroke-width: 2;
+    stroke-width: 3;
 }
 
 .spider-circles {
@@ -21,7 +21,7 @@
 .spider-dots {
     stroke: #3c97b0;
     fill: #fafafa;
-    stroke-width: 2;
+    stroke-width: 3;
 }
 
 .spider-middle {
@@ -29,4 +29,12 @@
     stroke: #000;
     stroke-width: 1;
     opacity: 0.85
+}
+
+.tooltips{
+    background: #3c97b0 !important;
+    color: #fff !important;
+    font-size: 20px !important;
+    border: 2px solid #144857 !important;
+    border-radius: 5px !important;
 }
